--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vee-validate/i18n": "^4.7.4",
     "@vee-validate/rules": "^4.7.4",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10",
     "axios": "^1.3.3",
     "core-js": "^3.8.3",
