--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-carousel": "^0.18.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.3",
+    "vue-simple-drawer": "^1.0.6",
     "vue3-carousel": "^0.2.9",
     "vuex": "^4.0.0"
   },
